@@ -19,7 +19,6 @@ package org.openqa.selenium.chromium;
 
 import static org.openqa.selenium.chromium.ChromiumDriver.IS_CHROMIUM_BROWSER;
 
-import com.google.common.collect.ImmutableMap;
 import java.util.Map;
 import java.util.function.Predicate;
 import org.openqa.selenium.Capabilities;
@@ -58,9 +57,9 @@ public abstract class AddHasCdp implements AugmenterProvider<HasCdp>, Additional
         Map<String, Object> toReturn =
             (Map<String, Object>)
                 executeMethod.execute(
-                    EXECUTE_CDP, ImmutableMap.of("cmd", commandName, "params", parameters));
+                    EXECUTE_CDP, Map.of("cmd", commandName, "params", parameters));
 
-        return ImmutableMap.copyOf(toReturn);
+        return Map.copyOf(toReturn);
       }
     };
   }
